Fix arrow down being cropped on safari
TP: https://contentful.tpondemand.com/entity/13003

--- a/src/stylesheets/modules/snapshots.styl
+++ b/src/stylesheets/modules/snapshots.styl
@@ -126,6 +126,7 @@
   font-size: 16px
   font-weight: bold
   outline: none
+  padding-right: 4px
 
   &.btn-link:hover
     transition: none
